[tool.poetry]
name = "test-poetry"
version = "0.1.0"
description = ""
authors = ["Sondre Lillebø Gundersen <sondrelg@live.no>"]

[tool.poetry.dependencies]
python = "^3.6"
dataclasses = {version=">=0.7,<0.9", python = "~3.6"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
black = "^20.8b1"
mypy = "^0.812"
pytest-cov = "^2.12.0"
attrs = "^21.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
